# Lab13-Observability

./: .gitignore  GRADIO_UI_GUIDE.md  PLAN.md  QUICKSTART.md  docker-compose.yml  gradio_ui.py  launch_dashboard.py  main.py  pyproject.toml  requirements.txt  test_gradio_integration.py  test_langfuse.py
app/: agent.py  audit.py  incidents.py  logging_config.py  main.py  metrics.py  middleware.py  pii.py  tracing.py
config/: alert_rules.yaml
data/: sample_queries.jsonl
docs/: alerts.md  blueprint-template.md  dashboard-spec.md  grading-evidence.md
scratch/: check_langfuse.py
scripts/: auto_report.py  inject_incident.py  load_test.py  test_tracing.py
utils/: __init__.py  dashboard_helpers.py
